<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView 
    android:id="@+id/ScrollLayout_Q4"
   android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Q4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4" />

    <CheckBox
        android:id="@+id/q4_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_A" />
"

    <CheckBox
        android:id="@+id/q4_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_B" />

    <CheckBox
        android:id="@+id/q4_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_C" />

    <CheckBox
        android:id="@+id/q4_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_D" />

    <CheckBox
        android:id="@+id/q4_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q4_E" />

    <CheckBox
        android:id="@+id/q4_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q4_F" />

    <Button
        android:id="@+id/Submit_q4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit_button" />

</LinearLayout>
</ScrollView>
</RelativeLayout>