<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView 
    android:id="@+id/ScrollLayout_Q2"
   android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/q2" />

    <CheckBox
        android:id="@+id/Q2_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/q2_A" />

    <CheckBox
        android:id="@+id/Q2_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2_B" />

    <CheckBox
        android:id="@+id/Q2_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2_C" />

    <CheckBox
        android:id="@+id/Q2_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2_D" />

    <CheckBox
        android:id="@+id/Q2_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2_E" />

    <Button
        android:id="@+id/Submit_q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit_button" />

</LinearLayout>
</ScrollView>
</RelativeLayout>
