<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView 
    android:id="@+id/ScrollLayout_Q8"
   android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Q8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:id="@+id/q7_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q8_A" />
"

    <CheckBox
        android:id="@+id/q8_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q8_B" />

    <CheckBox
        android:id="@+id/q8_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q8_C" />

    <CheckBox
        android:id="@+id/q8_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/q8_D" />

    <CheckBox
        android:id="@+id/q8_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q8_E" />

    <CheckBox
        android:id="@+id/q8_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q8_F" />

    <CheckBox
        android:id="@+id/q8_G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q8_G" />

    <Button
        android:id="@+id/Submit_q8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit_button" />

</LinearLayout>
</ScrollView>
</RelativeLayout>